--- a/gen/ify.html
+++ b/gen/ify.html
@@ -194,7 +194,7 @@ let d = Math.sqrt(dx2*dx2 + dy2*dy2)
                       ki3=k
                     }
                  }
-                 let r=Math.random()*0.5>?ki:ki2;
+                 let r=Math.random()>0.5?ki:ki2;
                  vcg[r].push([j,i]);
               }
            }
