--- a/gen/ify.html
+++ b/gen/ify.html
@@ -77,15 +77,15 @@
         let td=16;
         let tbd=16;
         const WW=600||innerWidth;
-            const HH=WW;
+            const HH=WW+30;
             const W=WW/res;
-            const H=W;
+            const H=W+30;
         let idxr=[];
         let ft=true;
         let fetching=false;
             
             
-        let vc=41+Math.floor(Math.random()*50);
+        let vc=61+Math.floor(Math.random()*50);
         let vca=[];
         let vcg=[];
         function fillvca(){
